--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "npm-run-all -p serve browserSync watch",
     "serve": "nodemon server.js",
     "browserSync": "browser-sync start -p 'localhost:3000' -f 'public'",
-    "watch": "npm run watch:css",
-    "build": "npm run build:css",
+    "watch": "npm-run-all -p watch:css watch:js",
+    "build": "npm run build:css && npm run build:js",
     "autoprefixer": "postcss -u autoprefixer -r src/css/styles.css -o public/css/styles.min.css",
     "cssnano": "postcss -u cssnano -r public/css/styles.min.css",
+    "css-import": "postcss -u postcss-import -r src/css/import.css -o src/css/styles.css",
+    "css-vars": "postcss -u postcss-simple-vars -r public/css/styles.min.css",
     "clean:css": "rimraf public/css",
-    "build:css": "npm run clean:css && npm run autoprefixer && npm run cssnano",
-    "watch:css": "onchange 'src/css/styles.css' -- npm run build:css",
+    "build:css": "npm run clean:css && npm run css-import && npm run autoprefixer && npm run css-vars && npm run cssnano",
+    "watch:css": "onchange 'src/css/**/*.css' -e 'src/css/styles.css' -- npm run build:css",
+    "babel": "babel src/js --presets es2015 -d public/js --source-maps inline",
+    "uglify": "uglifyjs public/js/app.js -o public/js/app.min.js",
     "clean:js": "rimraf public/js",
-    "uglify": "npm run clean:js && uglifyjs src/js/*.js -m -o public/js/app.js",
-    "imagemin": "imagemin src/images dist/images -p"
+    "build:js": "npm run clean:js && npm run babel",
+    "watch:js": "onchange 'src/js/*.js' -- npm run babel",
+    "imagemin": "imagemin src/images dist/images -p",
+    "clean:fonts": "rimraf public/fonts && mkdir public/fonts",
+    "build:fonts": "npm run clean:fonts && cp -r src/fonts/* public/fonts/"
   },
   "keywords": [],
   "author": "",
@@ -29,11 +36,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.4",
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
     "npm-run-all": "^4.0.1",
     "onchange": "^3.2.1",
     "postcss-cli": "^3.0.0-beta",
+    "postcss-import": "^9.1.0",
+    "postcss-simple-vars": "^3.0.0",
+    "rimraf": "^2.6.0",
     "uglify-js": "^2.7.5"
   }
 }
